fixes and additions

--- a/tpl/UI/basic_page.html
+++ b/tpl/UI/basic_page.html
@@ -12,7 +12,7 @@
         {/foreach}
 
         {foreach $PAGE_JAVASCRIPT as $JAVASCRIPT}
-            <script type="application/javascript" src="{$JAVASCRIPT}" />
+            <script type="application/javascript" src="{$JAVASCRIPT}"></script>
         {/foreach}
 
     </head>
