--- a/tpl/UI/basic_page.html
+++ b/tpl/UI/basic_page.html
@@ -11,7 +11,7 @@
             <link type="text/css" rel="stylesheet" href="{$STYLESHEET}" />
         {/foreach}
 
-        {foreach $PAGE_JAVASCRIPT as $JAVASCRIPT}
+        {foreach $PAGE_JAVASCRIPTS as $JAVASCRIPT}
             <script type="application/javascript" src="{$JAVASCRIPT}"></script>
         {/foreach}
 
