--- a/tpl/UI/Element/Content/Image/Standard.html
+++ b/tpl/UI/Element/Content/Image/Standard.html
@@ -1,1 +1,1 @@
-<img class="{$CLASSES}" src="{$SRC}" alt="{$LABEL}" title="{$LABEL}" />
+<img class="{$CLASSES}" src="{$SRC}" alt="{$LABEL}" title="{$LABEL}" {$ATTRIBUTES} />
