dropdown image integration

--- a/tpl/UI/Element/Content/Image/Thumbnail.html
+++ b/tpl/UI/Element/Content/Image/Thumbnail.html
@@ -1,1 +1,1 @@
-<img class="img-thumbnail {$CLASSES}" src="{$SRC}" alt="{$LABEL}" title="{$LABEL}" />
+<img class="img-thumbnail {$CLASSES}" src="{$SRC}" alt="{$LABEL}" title="{$LABEL}" {$ATTRIBUTES} />
