--- a/tpl/UI/Element/Content/Image/RoundedPill.html
+++ b/tpl/UI/Element/Content/Image/RoundedPill.html
@@ -1,1 +1,1 @@
-<img class="rounded-pill {$CLASSES}" src="{$SRC}" alt="{$LABEL}" title="{$LABEL}" />
+<img class="rounded-pill {$CLASSES}" src="{$SRC}" alt="{$LABEL}" title="{$LABEL}" {$ATTRIBUTES} />
