--- a/tpl/UI/Element/Table/Cell.html
+++ b/tpl/UI/Element/Table/Cell.html
@@ -1,3 +1,3 @@
-{if $ISHEAD}<th style="border: solid #3c3c3c 1px; padding: 5px;">{$CONTENT}</th>
-{else}<td style="border: solid #3c3c3c 1px; padding: 5px;">{$CONTENT}</td>
+{if $ISHEAD}<th style="border: solid #3c3c3c 1px; padding: 5px; {$STYLES}">{$CONTENT}</th>
+{else}<td style="border: solid #3c3c3c 1px; padding: 5px; {$STYLES}">{$CONTENT}</td>
 {/if}
