--- a/tpl/UI/Element/Table/Container.html
+++ b/tpl/UI/Element/Table/Container.html
@@ -1,4 +1,4 @@
-<table style="border: solid #3c3c3c 1px; border-collapse: collapse; margin: 10px;">
+<table>
 {if $HEADROW}
     <thead>
         {$HEADROW}
