--- a/tpl/UI/Element/Form/checkbox.html
+++ b/tpl/UI/Element/Form/checkbox.html
@@ -1,4 +1,4 @@
-<div class="formInputRadio">
+<div class="formInputCheckbox">
     <input type="checkbox" name="{$NAME}" value="{$VALUE}" {if $OPTION.checked}checked="checked"{/if} />
     <span>{$LABEL}</span>
 </div>
