--- a/tpl/UI/Element/Form/input.html
+++ b/tpl/UI/Element/Form/input.html
@@ -1,1 +1,3 @@
-<input type="text" name="{$NAME}" value="{$VALUE}" />
+<div class="formInputText">
+	<input id="{$ID}" type="{$TYPE}" name="{$NAME}" value="{$VALUE}" size="{$SIZE}" maxlength="{$MAXLENGTH}" />
+</div>
