--- a/tpl/UI/Element/Form/select.html
+++ b/tpl/UI/Element/Form/select.html
@@ -1,5 +1,7 @@
-<select name="{$NAME}">
-  {foreach $OPTIONS as $OPTION}
-    <option value="{$OPTION.value}" {if $OPTION.selected}selected="selected"{/if}>{$OPTION.label}</option>
-  {/foreach)
-</select>
+<div class="formInputSelect">
+  <select name="{$NAME}">
+    {foreach $OPTIONS as $OPTION}
+      <option value="{$OPTION.value}" {if $OPTION.selected}selected="selected"{/if}>{$OPTION.label}</option>
+    {/foreach)
+  </select>
+</div>
