--- a/tpl/UI/Element/Form/textarea.html
+++ b/tpl/UI/Element/Form/textarea.html
@@ -1,1 +1,3 @@
-<textarea name="{$NAME}">{$VALUE}</textarea>
+<div class="formInputTextarea">
+	<textarea name="{$NAME}">{$VALUE}</textarea>
+</div>
