--- a/tpl/UI/XHTML/document.html
+++ b/tpl/UI/XHTML/document.html
@@ -19,6 +19,23 @@
 
     <body>
         {$PAGE_BODY}
+        <style>
+            .xy div.row div {
+                border: solid black 1px;
+            }
+        </style>
+        <div class="container xy">
+            <div class="row">
+                <div class="col-5">A</div>
+                <div class="col-2">B</div>
+                <div class="col-5">C</div>
+                <div class="col">D</div>
+                <div class="col">E</div>
+                <div class="col">F</div>
+                <div class="col">G</div>
+                <div class="col">H</div>
+            </div>
+        </div>
     </body>
 
 </html>
