--- a/tpl/UI/Element/Form/input.html
+++ b/tpl/UI/Element/Form/input.html
@@ -1,3 +1,1 @@
-<div class="formInputText">
-	<input id="{$ID}" type="{$TYPE}" name="{$NAME}" value="{$VALUE}" size="{$SIZE}" maxlength="{$MAXLENGTH}" />
-</div>
+<input id="{$ID}" class="form-control {$CLASSES}" type="{$TYPE}" name="{$NAME}" value="{$VALUE}" size="{$SIZE}" maxlength="{$MAXLENGTH}" {$ATTR} />
