--- a/tpl/UI/Element/Form/submit.html
+++ b/tpl/UI/Element/Form/submit.html
@@ -1,1 +1,1 @@
-<input type="submit" name="{$NAME}" class="form-control" value="{$LABEL}" />
+<input type="submit" name="command[{$COMMAND}]" class="form-control btn btn-primary" value="{$LABEL}" />
