attributes and css classes as commons, soe css

--- a/tpl/UI/Element/Form/checkbox.html
+++ b/tpl/UI/Element/Form/checkbox.html
@@ -1,4 +1,4 @@
 <div class="formInputCheckbox">
-    <input type="checkbox" name="{$NAME}" value="{$VALUE}" {if $OPTION.checked}checked="checked"{/if} />
+    <input type="checkbox" name="{$NAME}" value="{$VALUE}" class="{$CSS_CLASSES}" {if $OPTION.checked}checked="checked"{/if} />
     <span>{$LABEL}</span>
 </div>
