--- a/tpl/UI/Element/Form/input.html
+++ b/tpl/UI/Element/Form/input.html
@@ -1,1 +1,1 @@
-<input id="{$ID}" class="form-control {$CLASSES}" type="{$TYPE}" name="{$NAME}" value="{$VALUE}" size="{$SIZE}" maxlength="{$MAXLENGTH}" {$ATTR} />
+<input id="{$ID}" class="form-control {$CSS_CLASSES}" type="{$TYPE}" name="{$NAME}" value="{$VALUE}" size="{$SIZE}" maxlength="{$MAXLENGTH}" {$ATTRIBUTES} />
