--- a/tpl/UI/Element/Form/radio.html
+++ b/tpl/UI/Element/Form/radio.html
@@ -1,6 +1,6 @@
 <div class="formInputRadio">
   {foreach $OPTIONS as $OPTION}
-  <input type="radio" name="{$NAME}" value="{$OPTION.value}" {if $OPTION.checked}checked="checked"{/if} >
+  <input type="radio" name="{$NAME}" value="{$OPTION.value}" class="{$CSS_CLASSES}" {if $OPTION.checked}checked="checked"{/if}>
   <span>{$OPTION.label}</span>
   {/foreach)
 </div>
