--- a/tpl/UI/Element/Form/textarea.html
+++ b/tpl/UI/Element/Form/textarea.html
@@ -1,3 +1,3 @@
 <div class="formInputTextarea">
-	<textarea name="{$NAME}">{$VALUE}</textarea>
+	<textarea name="{$NAME}" class="{$CSS_CLASSES}">{$VALUE}</textarea>
 </div>
